--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -1691,6 +1691,92 @@
             await router.render('/');
             expect(outlet.children[0].tagName).to.match(/x-home-view/i);
           });
+
+          it('should reuse DOM instance even when route has completely different path', async() => {
+            let sharedElementInstance = null;
+            let serverSideComponentId = 0;
+            const action = (context) => {
+              const elm = sharedElementInstance || (sharedElementInstance = document.createElement('flow-root-outlet'));
+              // clear content
+              elm.innerHTML = '';
+              // Assumed this is an element return by server
+              const content = document.createElement(`server-side-${context.pathname.substring(1)}`);
+              content.textContent = context.pathname;
+              content.id = 'flow' + ++serverSideComponentId;
+              elm.appendChild(content);
+              // Return always the same instance of flow-root-outlet
+              return elm;
+            };
+            router.setRoutes([{
+              path: '/',
+              children: [
+                {
+                  path: 'client-view',
+                  component: 'x-client-view',
+                },
+                {
+                  path: '(.*)',
+                  action: action
+                }
+              ]
+            }]);
+
+            await router.ready;
+            await router.render('/client-view');
+            expect(outlet.children[0].tagName).to.match(/x-client-view/i);
+
+            await router.render('/server-view');
+            expect(outlet.children[0]).to.be.equal(sharedElementInstance);
+            expect(outlet.children[0].children[0].tagName).to.match(/server-side-server-view/i);
+            expect(outlet.children[0].children[0].id).to.be.equal(`flow${serverSideComponentId}`);
+            expect(outlet.children[0].children[0].textContent).to.be.equal('/server-view');
+
+            await router.render('/reviews-list');
+            expect(outlet.children[0]).to.be.equal(sharedElementInstance);
+            expect(outlet.children[0].children[0].tagName).to.match(/server-side-reviews-list/i);
+            expect(outlet.children[0].children[0].id).to.be.equal(`flow${serverSideComponentId}`);
+            expect(outlet.children[0].children[0].textContent).to.be.equal('/reviews-list');
+          });
+
+          it('should keep tree structure and content when re-visiting the same route', async() => {
+            const view = document.createElement('span');
+            const action = ctx => {
+              view.textContent = ctx.pathname;
+              return view;
+            };
+            router.setRoutes([{
+              path: '/',
+              component: 'main-layout',
+              children: [
+                {
+                  path: '/categories',
+                  component: 'input'
+                },
+                {
+                  path: '(.*)',
+                  action: action
+                }
+              ]
+            }], true);
+
+            await router.render('/foo');
+            expect(outlet.children[0].localName).to.be.equal('main-layout');
+            expect(outlet.children[0].children[0].localName).to.be.equal('span');
+            expect(outlet.children[0].children[0].textContent).to.be.equal('/foo');
+
+            // Double click on the same route
+            await router.render('/categories');
+            expect(outlet.children[0].localName).to.be.equal('main-layout');
+            expect(outlet.children[0].children[0].localName).to.be.equal('input');
+            await router.render('/categories');
+            expect(outlet.children[0].localName).to.be.equal('main-layout');
+            expect(outlet.children[0].children[0].localName).to.be.equal('input');
+
+            await router.render('/foo');
+            expect(outlet.children[0].localName).to.be.equal('main-layout');
+            expect(outlet.children[0].children[0].localName).to.be.equal('span');
+            expect(outlet.children[0].children[0].textContent).to.be.equal('/foo');
+          });
         });
 
         describe('route.action (function) return the same element tag with different content', () => {
