--- a/test/router/url-for.spec.html
+++ b/test/router/url-for.spec.html
@@ -54,7 +54,7 @@
             {name: 'user-profile', path: '/users/:userId/(.*)', component: 'x-user-profile'},
             {path: '/users', component: 'x-user-list'}
           ]},
-        ]));
+        ], true));
 
         it('should exist', () => {
           expect(router.urlForName).to.be.instanceof(Function);
@@ -105,7 +105,7 @@
               {name: 'home', path: '/new-home', component: 'x-home-view'},
               {path: '/new-users', component: 'x-user-list'},
             ]},
-          ]);
+          ], true);
 
           expect(router.urlForName('app')).to.equal('/new-app');
           expect(router.urlForName('home')).to.equal('/new-app/new-home');
