--- a/demo/vaadin-router-code-splitting-demos.html
+++ b/demo/vaadin-router-code-splitting-demos.html
@@ -119,6 +119,12 @@
       not supporting them natively. Both Webpack and Polymer CLI support dynamic imports for lazy
       loading ES modules, and transform them for the older browsers.
     </p>
+    <p>
+      Note: If the dynamically loaded route has lifecycle callbacks, the action
+      should return a promise that resolves only when the route component is
+      loaded (like in the example below). Otherwise the lifecycle callbacks on
+      the dynamically loaded route's web component are not called.
+    </p>
     <vaadin-demo-snippet id="vaadin-router-code-splitting-3" iframe-src="iframe.html">
       <template preserve-content>
         <a href="/">Home</a>
@@ -133,8 +139,8 @@
             {path: '/', component: 'x-home-view'},
             {
               path: '/user/:id',
-              action: () => {
-                Vaadin.Demo.import(`${Vaadin.Demo.componentsRoot}/user.bundle.js`);
+              action: async() => {
+                await Vaadin.Demo.import(`${Vaadin.Demo.componentsRoot}/user.bundle.js`);
               },
               component: 'x-user-js-bundle-view' // <-- defined in the bundle
             },
@@ -142,6 +148,11 @@
         </script>
       </template>
     </vaadin-demo-snippet>
+    <p>
+      If dynamic imports are used both for parent and child routes, then the
+      example above may possibly slow down rendering because router would not
+      start importing a child component until its parent is imported.
+    </p>
 
     <h3>Splitting and Lazy-Loading the Routes Configuration</h3>
     <p>
