--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -1570,7 +1570,7 @@
           ]);
         });
 
-        it('should update previousContext when attach is skipped (#391)', async () => {
+        it('should update previousContext when attach is skipped (#391)', async() => {
           const container = document.createElement('x-spy');
           const layout = document.createElement('div');
 
@@ -1582,7 +1582,7 @@
                 {
                   path: '(.*)',
                   action: (ctx) => {
-                    container.name = `${ctx.pathname}-container`
+                    container.name = `${ctx.pathname}-container`;
                     callbacksLog.push(`${container.name}.action`);
                     return container;
                   }
@@ -1616,6 +1616,45 @@
             '/server1-container.onBeforeLeave',
             '/server1-container.onBeforeEnter'
           ]);
+        });
+
+
+        it('should not remove layout contents when it is reused (#392)', async() => {
+          // A reusable layout with some content
+          const layout = document.createElement('span');
+          const layoutContent = document.createElement('a');
+          layoutContent.textContent = 'layout-link';
+          layout.appendChild(layoutContent);
+
+          // Two different reusable views for client and server routes
+          const clientContainer = document.createElement('h1');
+          clientContainer.textContent = 'client';
+          const serverContainer = document.createElement('h2');
+          serverContainer.textContent = 'server';
+
+          router.setRoutes([
+            {
+              path: '/',
+              action: () => layout,
+              children: [
+                {
+                  path: 'client',
+                  action: ctx => clientContainer
+                },
+                {
+                  path: 'server',
+                  action: ctx => serverContainer
+                }
+
+              ]
+            }
+          ], true);
+
+          await router.render('/server');
+          expect(outlet.innerHTML.toLowerCase()).to.be.equal('<span><a>layout-link</a><h2>server</h2></span>');
+
+          await router.render('/client');
+          expect(outlet.innerHTML.toLowerCase()).to.be.equal('<span><a>layout-link</a><h1>client</h1></span>');
         });
       });
 
